OSPO-METRICS/deployment/cloud/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: #{projectname}#-gateway
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{projectname}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "#{gateway_host_aws}#"
  #   tls:
  #     httpsRedirect: true
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTP
  #   hosts:
  #   - "#{gateway-host}#"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: #{service-name}#-vs
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{projectname}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  hosts:
    -  #{gateway_host_aws}#
  gateways:
    - #{projectname}#-gateway
  http:
    - match:
        - uri:
            prefix: /#{projectname}#/#{service-name}#
      rewrite:
        uri: "/#{service-name}#"
      route:
        - destination:
            host: #{service-name}#
            port:
              number: 80
      #websocketUpgrade: true #if websockets are required
